# Data-Science-Training

./: main.py  multipke_linear_regression.ipynb  polynomial_regression.ipynb  pyproject.toml  untitled.ows
03 titanic dataset analysis/: main.py  pyproject.toml
05/: main.ipynb  pyproject.toml
06/: main.ipynb  pyproject.toml
08 fast API and Streamlit/: api.py  app.py  pyproject.toml
09.Linear regression/: command  main.py  pyproject.toml  simple_linear_regression.ipynb
new/: main.py  pyproject.toml
overall/: housing.ows  insurancerevision.ipynb  main.py  program.ipynb
pyone/: api.py  function.py  main.py  pyproject.toml
pytwo/: main (1).py  main.py  numpyandpandas.py  pyproject.toml
titanic_dash/: commmand  pyproject.toml
titanic_dash/__MACOSX/: ._app.py
